--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,9 @@
 [submodule "bundle/vim-textobj-user"]
 	path = bundle/vim-textobj-user
 	url = https://github.com/kana/vim-textobj-user.git
+[submodule "pathogen"]
+	path = pathogen
+	url = https://github.com/tpope/vim-pathogen.git
+[submodule "bundle/vim-align"]
+	path = bundle/vim-align
+	url = https://github.com/pix/vim-align.git
