--- a/.gitmodules
+++ b/.gitmodules
@@ -1,162 +1,3 @@
-[submodule "bundle/command-t"]
-	path = bundle/command-t
-	url = git://git.wincent.com/command-t.git
-[submodule "bundle/autotag"]
-	path = bundle/autotag
-	url = https://github.com/vim-scripts/AutoTag.git
-[submodule "bundle/eco"]
-	path = bundle/eco
-	url = https://github.com/jayferd/eco.vim.git
-[submodule "bundle/gundo"]
-	path = bundle/gundo
-	url = https://github.com/sjl/gundo.vim.git
-[submodule "bundle/jslint"]
-	path = bundle/jslint
-	url = https://github.com/hallettj/jslint.vim.git
-[submodule "bundle/matchit"]
-	path = bundle/matchit
-	url = https://github.com/wzzrd/vim-matchit.git
-[submodule "bundle/mustache"]
-	path = bundle/mustache
-	url = git://github.com/juvenn/mustache.vim.git
-[submodule "bundle/nerdtree"]
-	path = bundle/nerdtree
-	url = https://github.com/vim-scripts/The-NERD-tree.git
-[submodule "bundle/scss-syntax"]
-	path = bundle/scss-syntax
-	url = https://github.com/adamnbowen/scss-syntax.vim.git
-[submodule "bundle/snipmate"]
-	path = bundle/snipmate
-	url = https://github.com/ervandew/snipmate.vim.git
-[submodule "bundle/tabular"]
-	path = bundle/tabular
-	url = https://github.com/vim-scripts/Tabular.git
-[submodule "bundle/tcomment"]
-	path = bundle/tcomment
-	url = https://github.com/vim-scripts/comment.vim.git
-[submodule "bundle/vim-autocomplpop"]
-	path = bundle/vim-autocomplpop
-	url = https://github.com/clones/vim-autocomplpop.git
-[submodule "bundle/vim-coffee-script"]
-	path = bundle/vim-coffee-script
-	url = https://github.com/sdiehl/vim-coffee-script.git
-[submodule "bundle/vim-solarized"]
-	path = bundle/vim-solarized
-	url = https://github.com/imathis/vim-colors-solarized.git
-[submodule "bundle/vim-endwise"]
-	path = bundle/vim-endwise
-	url = https://github.com/tpope/vim-endwise.git
-[submodule "bundle/fugitive"]
-	path = bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "bundle/vim-javascript"]
-	path = bundle/vim-javascript
-	url = https://github.com/pangloss/vim-javascript.git
-[submodule "bundle/vim-rails"]
-	path = bundle/vim-rails
-	url = https://github.com/tpope/vim-rails.git
-[submodule "bundle/vim-haml"]
-	path = bundle/vim-haml
-	url = https://github.com/tpope/vim-haml.git
-[submodule "bundle/vim-cucumber"]
-	path = bundle/vim-cucumber
-	url = https://github.com/tpope/vim-cucumber.git
-[submodule "bundle/vim-unimpaired"]
-	path = bundle/vim-unimpaired
-	url = https://github.com/tpope/vim-unimpaired.git
-[submodule "bundle/vim-git"]
-	path = bundle/vim-git
-	url = https://github.com/tpope/vim-git.git
-[submodule "bundle/vim-markdown"]
-	path = bundle/vim-markdown
-	url = https://github.com/tpope/vim-markdown.git
-[submodule "bundle/vim-repeat"]
-	path = bundle/vim-repeat
-	url = https://github.com/tpope/vim-repeat.git
-[submodule "bundle/vim-surround"]
-	path = bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
-[submodule "bundle/vim-l9"]
-	path = bundle/vim-l9
-	url = https://github.com/vim-scripts/L9.git
-[submodule "bundle/vim-rspec"]
-	path = bundle/vim-rspec
-	url = https://github.com/vlmonk/vim-rspec.git
-[submodule "bundle/vim-stylus"]
-	path = bundle/vim-stylus
-	url = https://github.com/vim-scripts/vim-stylus.git
-[submodule "bundle/yankring"]
-	path = bundle/yankring
-	url = https://github.com/chrismetcalf/vim-yankring.git
-[submodule "bundle/vim-textobj-rubyblock"]
-	path = bundle/vim-textobj-rubyblock
-	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
-[submodule "bundle/vim-textobj-user"]
-	path = bundle/vim-textobj-user
-	url = https://github.com/kana/vim-textobj-user.git
-[submodule "pathogen"]
-	path = pathogen
-	url = https://github.com/tpope/vim-pathogen.git
-[submodule "bundle/vim-align"]
-	path = bundle/vim-align
-	url = https://github.com/pix/vim-align.git
-[submodule "bundle/twitvim"]
-	path = bundle/twitvim
-	url = https://github.com/vim-scripts/TwitVim.git
-[submodule "bundle/vim-abolish"]
-	path = bundle/vim-abolish
-	url = https://github.com/tpope/vim-abolish.git
-[submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
-[submodule "bundle/cascade"]
-	path = bundle/cascade
-	url = https://github.com/c9s/cascading.vim.git
-[submodule "bundle/vim-rake"]
-	path = bundle/vim-rake
-	url = https://github.com/tpope/vim-rake.git
-[submodule "bundle/taglist-plus"]
-	path = bundle/taglist-plus
-	url = https://github.com/int3/vim-taglist-plus.git
-[submodule "bundle/css_color"]
-	path = bundle/css_color
-	url = https://github.com/vim-scripts/css_color.vim.git
-[submodule "bundle/better_css_syntax"]
-	path = bundle/better_css_syntax
-	url = https://github.com/vim-scripts/Better-CSS-Syntax-for-Vim.git
-[submodule "rename"]
-	path = rename
-	url = https://github.com/vim-scripts/Rename
-[submodule "bundle/sparkup"]
-	path = bundle/sparkup
-	url = https://github.com/rstacruz/sparkup.git
-[submodule "bundle/hammer.vim"]
-	path = bundle/hammer.vim
-	url = https://github.com/robgleeson/hammer.vim.git
-[submodule "bundle/html5.vim"]
-	path = bundle/html5.vim
-	url = https://github.com/othree/html5.vim.git
-[submodule "bundle/rainbow_parentheses"]
-	path = bundle/rainbow_parentheses
-	url = https://github.com/kien/rainbow_parentheses.vim.git
-[submodule "bundle/colorscheme-molokai"]
-	path = bundle/colorscheme-molokai
-	url = https://github.com/vim-scripts/molokai.git
-[submodule "bundle/syntastic"]
-	path = bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
-[submodule "bundle/supertab.vim"]
-	path = bundle/supertab.vim
-	url = https://github.com/ervandew/supertab.git
-[submodule "bundle/vim-speeddating"]
-	path = bundle/vim-speeddating
-	url = https://github.com/tpope/vim-speeddating.git
-[submodule "bundle/closetag"]
-	path = bundle/closetag
-	url = https://github.com/vim-scripts/closetag.vim.git
-[submodule "vim-indent-object"]
-	path = vim-indent-object
-	url = https://github.com/michaeljsmith/vim-indent-object.git
-[submodule "bundle/vim-powerline"]
-	path = bundle/vim-powerline
-	url = https://github.com/Lokaltog/vim-powerline.git
+[submodule "bundle/vundle"]
+	path = bundle/vundle
+	url = https://github.com/gmarik/vundle.git
